--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
+  <h2 class="!my-0 pb-1 !leading-none">Laying Dormant</h2>
+  <time class="text-sm opacity-60">Jan 30, 2025</time>
+  <a class="absolute inset-0" href="https://pdacorte.github.io/posts/laying_dormant/"></a>
+</section>
+
+
+
+
+
+<section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
   <h2 class="!my-0 pb-1 !leading-none">Earning the Sunset</h2>
   <time class="text-sm opacity-60">Oct 23, 2024</time>
   <a class="absolute inset-0" href="https://pdacorte.github.io/posts/earningsunset/"></a>
@@ -277,16 +287,6 @@
 
 
 
-
-<section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none">Day 3</h2>
-  <time class="text-sm opacity-60">Sep 26, 2022</time>
-  <a class="absolute inset-0" href="https://pdacorte.github.io/posts/day_3/"></a>
-</section>
-
-
-
-
 <nav class="mt-24 flex">
   
   
@@ -300,7 +300,7 @@
 
     <footer class="opaco mx-auto flex h-[5rem] max-w-3xl items-center px-8 text-[0.9em] opacity-60">
   <div class="mr-auto">
-    &copy; 2024
+    &copy; 2025
     <a class="link" href="https://pdacorte.github.io">Paulo da Corte</a>
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank">Powered by Hugo️️</a
